<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    android:layout_marginHorizontal="24dp"

    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_are_so_delighted_you_re_here"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:lineHeight="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_100_coins_on_entering_the_referral_code"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#7A7A7A"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:lineHeight="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_referral_code"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineHeight="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/referralCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_edittext"
            android:textAppearance="@style/dark_text"
            android:textColor="@color/black"
            android:gravity="center"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Code should be of 6 characters or check it again"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:lineHeight="16dp"
            android:gravity="center_horizontal"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:backgroundTint="@color/black"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/continue_button"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:layout_marginHorizontal="47dp"
                android:layout_marginVertical="10dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginVertical="24dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>