<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@drawable/otp_bg">


    <View

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:background="@drawable/dark_bg_gradient" />


    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginHorizontal="24dp"

        android:layout_marginTop="155dp"

        android:orientation="vertical">


        <ImageView

            android:id="@+id/back"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginBottom="45dp"

            android:src="@drawable/back" />


        <TextView

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins_semibold"

            android:text="@string/enter_otp"

            android:textColor="#EBEBEB"

            android:textSize="28sp" />


        <TextView

            style="@style/light_text"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_marginTop="28dp"

            android:fontFamily="@font/poppins_regular"

            android:text="@string/otp_instruction" />


        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:orientation="vertical">


                <TextView

                    android:id="@+id/phone"

                    style="@style/light_text"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:fontFamily="@font/poppins_semibold"

                    android:text="@string/phone_edit" />


                <View

                    android:layout_width="match_parent"

                    android:layout_height="1dp"

                    android:layout_marginTop="-8dp"

                    android:background="#EBEBEB" />


            </LinearLayout>


            <ImageView

                android:id="@+id/edit_phone"

                android:layout_width="16dp"

                android:layout_height="16dp"

                android:layout_marginVertical="2dp"

                android:layout_marginStart="8dp"

                android:padding="2dp"

                android:src="@drawable/edit_square" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText

            android:id="@+id/phone_number"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_marginTop="26dp"

            android:autofillHints="phone"

            android:backgroundTint="#EBEBEB"

            android:fontFamily="@font/poppins_bold"

            android:inputType="phone"

            android:textColor="#EBEBEB"

            android:textSize="36sp" />


        <androidx.cardview.widget.CardView

            android:id="@+id/sign_in_button"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"

            app:cardCornerRadius="12dp">


            <TextView

                android:id="@+id/google_login"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginHorizontal="49dp"

                android:layout_marginVertical="10dp"

                android:fontFamily="@font/inter_semibold"

                android:gravity="center_vertical"

                android:text="@string/continue_string"

                android:textAppearance="@style/dark_text" />


        </androidx.cardview.widget.CardView>


        <LinearLayout

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"

            android:orientation="horizontal">


            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:fontFamily="@font/inter_light"

                android:text="@string/didn_t_receive_otp"

                android:textColor="#8FFFFFFF" />


            <LinearLayout

                android:id="@+id/resend_otp"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:orientation="vertical">


                <TextView

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:fontFamily="@font/inter_light"

                    android:text="@string/resend_otp"

                    android:textColor="#EBEBEB" />


                <View

                    android:layout_width="match_parent"

                    android:layout_height="1dp"

                    android:layout_marginTop="-2dp"

                    android:background="#EBEBEB" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

