<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="312dp"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="24dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/referral_success"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="-30dp"
            android:textColor="@color/black"
            android:text="@string/congratulations"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="17dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#7a7a7a"
            android:text="@string/you_just_earned_100_coins_through_a_referral"
            android:gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/continue_button"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:layout_marginHorizontal="47dp"
                android:layout_marginVertical="10dp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>